SigmaCodebackup3rdSep/objects/Stock_In__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Delivery_Note_Number__c</fullName>
        <label>Delivery Note Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Stock Receiving</relationshipLabel>
        <relationshipName>Stock_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving</relationshipLabel>
        <relationshipName>Stock_In1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving (Merchant Account)</relationshipLabel>
        <relationshipName>Stock_In2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Stock Receiving</relationshipLabel>
        <relationshipName>Stock_Receiving</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving (Parent Account)</relationshipLabel>
        <relationshipName>Stock_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Stock Receiving (Purchase Order)</relationshipLabel>
        <relationshipName>Stock_In</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date_Time__c</fullName>
        <label>Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Truck_Number__c</fullName>
        <label>Truck Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving (Vendor)</relationshipLabel>
        <relationshipName>Stock_Receiving</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Stock Receiving</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor__c</columns>
        <columns>Location__c</columns>
        <columns>Received_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Verified_Stock</fullName>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Verified Stock</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Stock In Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Receiving</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validation_on_Received_Date_and_Time</fullName>
        <active>false</active>
        <errorConditionFormula>Received_Date_Time__c &gt; $System.OriginDateTime</errorConditionFormula>
        <errorDisplayField>Received_Date_Time__c</errorDisplayField>
        <errorMessage>Received Date and time is incorrect.</errorMessage>
    </validationRules>
</CustomObject>